# soccer

./: .gitignore  Cargo.toml  README.md  goal_config.toml
build-scripts/: append-config.sh  build.sh
configuration/: Cargo.toml
configuration/src/: lib.rs
dns/: Cargo.toml
dns-types/: Cargo.toml
dns-types/src/: lib.rs
dns/src/: header.rs  lib.rs  question.rs  request_message.rs  resource_record.rs  response_message.rs  utils.rs
domain-name-actor/: Cargo.toml
domain-name-actor/src/: actor.rs  lib.rs  resolve.rs  result_cache.rs
domain-name-query-types/: Cargo.toml
domain-name-query-types/src/: lib.rs
goal/: Cargo.toml
goal/src/: cli_args.rs  main.rs  resolve.rs
mock_client/: Cargo.toml
mock_client/src/: main.rs
soccer/: Cargo.toml
soccer/src/: destination.rs  lib.rs  main.rs
transfer/: Cargo.toml
transfer/src/: byte_shift.rs  decode.rs  encode.rs  lib.rs  tcp_accept.rs
