[workspace]

members = [
    "dns",
    "goal",
    "mock_client",
    "soccer",
    "transfer",
]

[workspace.dependencies]
byteorder = "1.3.2"
bytes = "1.5.0"
env_logger = "0.11.3"
futures = "0.3.30"
http = "1.1.0"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
