[workspace]

members = [
    "dns",
    "domain-name-query-types",
    "domain-name-actor",
    "goal",
    "mock_client",
    "soccer",
    "transfer", "configuration",
]

[workspace.dependencies]
byteorder = "1.5.0"
bytes = "1.5.0"
config = { version = "0.14.0", default-features = false, features = ["toml"] }
env_logger = "0.11.3"
futures = "0.3.30"
http = "1.1.0"
log = "0.4.21"
serde = { version = "1.0.199", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tokio-tungstenite = "0.21.0"
