[package]
name = "goal"
version = "0.1.0"
authors = ["Yu Haidong"]
edition = "2018"

[dependencies]
dns = { version = "0.1.0", path = "../dns" }
transfer = { version = "0.1.0", path = "../transfer" }

byteorder = "1.3.2"
bytes = "=0.4.12"
futures = { version = "0.3.30" }
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
