[package]
name = "goal"
version = "0.1.0"
authors = ["Yu Haidong"]
edition = "2018"

[dependencies]
configuration = { version = "0.1.0", path = "../configuration" }
domain-name-query-types = { version = "0.1.0", path = "../domain-name-query-types" }
domain-name-actor = { version = "0.1.0", path = "../domain-name-actor" }
transfer = { version = "0.1.0", path = "../transfer" }

bytes = { workspace = true }
config = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
