[package]
name = "soccer"
version = "0.1.0"
authors = ["Yu Haidong"]
edition = "2018"

[dependencies]
dns = { version = "0.1.0", path = "../dns" }
transfer = { version = "0.1.0", path = "../transfer" }

bytes = "=0.4.12"
futures = { version = "0.3.1" }
tokio = { version = "0.2.2", features = ["full"] }
