[package]
name = "soccer"
version = "0.1.0"
authors = ["Yu Haidong"]
edition = "2018"

[dependencies]
dns = { version = "0.1.0", path = "../dns" }
transfer = { version = "0.1.0", path = "../transfer" }

bytes = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
